tests/style/bug_163_trailing_semicolons/expected_out.txt
=== PLAIN MODE ===
In test_01.m, line 3
| a = [1; 2; ; 3];
|            ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 3
| a = [1; 2; ; 3];
|            ^ style: this semicolon is not required and can be removed [fixed]
In test_01.m, line 6
| b = [;;1;;];
|      ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 6
| b = [;;1;;];
|      ^ style: this semicolon is not required and can be removed [fixed]
In test_01.m, line 6
| b = [;;1;;];
|       ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 6
| b = [;;1;;];
|       ^ style: this semicolon is not required and can be removed [fixed]
In test_01.m, line 6
| b = [;;1;;];
|         ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 6
| b = [;;1;;];
|         ^ style: this semicolon is not required and can be removed [fixed]
In test_01.m, line 6
| b = [;;1;;];
|          ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 6
| b = [;;1;;];
|          ^ style: this semicolon is not required and can be removed [fixed]
In test_01.m, line 9
| c = [1; 2;
|          ^ style: this semicolon is not required and can be removed [fixed]
In test_01.m, line 10
|      3; 4;];
|          ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 10
|      3; 4;];
|          ^ style: this semicolon is not required and can be removed [fixed]
In test_01.m, line 13
| d = [1;;;2];
|       ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 13
| d = [1;;;2];
|        ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 13
| d = [1;;;2];
|        ^ style: this semicolon is not required and can be removed [fixed]
In test_01.m, line 13
| d = [1;;;2];
|         ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 13
| d = [1;;;2];
|         ^ style: this semicolon is not required and can be removed [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|       ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|        ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|        ^ style: this semicolon is not required and can be removed [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|         ^ style: comma cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|         ^ style: this comma is not required and can be removed [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|          ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|          ^ style: this semicolon is not required and can be removed [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|           ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|           ^ style: this semicolon is not required and can be removed [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|            ^ style: comma cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|            ^ style: this comma is not required and can be removed [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|              ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|               ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|               ^ style: this semicolon is not required and can be removed [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|                ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|                ^ style: this semicolon is not required and can be removed [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|                  ^ style: comma cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|                  ^ style: this comma is not required and can be removed [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|                   ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|                   ^ style: this semicolon is not required and can be removed [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|                    ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|                    ^ style: this semicolon is not required and can be removed [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|                     ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 16
| e = [1;;,;;,2;;;3,;;;];
|                     ^ style: this semicolon is not required and can be removed [fixed]
In test_01.m, line 19
| f = [,];
|      ^ style: comma cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_01.m, line 19
| f = [,];
|      ^ style: this comma is not required and can be removed [fixed]
In test_02.m, line 3
| a = [1; 2; ; 3];
|            ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_02.m, line 3
| a = [1; 2; ; 3];
|            ^ style: this semicolon is not required and can be removed [fixed]
In test_02.m, line 6
| b = [; ; 1; ; ];
|      ^ style: this semicolon is not required and can be removed [fixed]
In test_02.m, line 6
| b = [; ; 1; ; ];
|        ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_02.m, line 6
| b = [; ; 1; ; ];
|        ^ style: this semicolon is not required and can be removed [fixed]
In test_02.m, line 6
| b = [; ; 1; ; ];
|           ^ style: this semicolon is not required and can be removed [fixed]
In test_02.m, line 6
| b = [; ; 1; ; ];
|             ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_02.m, line 6
| b = [; ; 1; ; ];
|             ^ style: this semicolon is not required and can be removed [fixed]
In test_02.m, line 6
| b = [; ; 1; ; ];
|               ^ style: ] must not be preceeded by whitespace [fixed]
In test_02.m, line 9
| c = [1; 2;
|          ^ style: this semicolon is not required and can be removed [fixed]
In test_02.m, line 10
|      3; 4; ];
|          ^ style: this semicolon is not required and can be removed [fixed]
In test_02.m, line 10
|      3; 4; ];
|            ^ style: ] must not be preceeded by whitespace [fixed]
In test_02.m, line 13
| d = [1; ; ; 2];
|         ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_02.m, line 13
| d = [1; ; ; 2];
|         ^ style: this semicolon is not required and can be removed [fixed]
In test_02.m, line 13
| d = [1; ; ; 2];
|           ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_02.m, line 13
| d = [1; ; ; 2];
|           ^ style: this semicolon is not required and can be removed [fixed]
In test_02.m, line 16
| e = [1; ; ; ; 2; ; ; 3; ; ; ];
|         ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_02.m, line 16
| e = [1; ; ; ; 2; ; ; 3; ; ; ];
|         ^ style: this semicolon is not required and can be removed [fixed]
In test_02.m, line 16
| e = [1; ; ; ; 2; ; ; 3; ; ; ];
|           ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_02.m, line 16
| e = [1; ; ; ; 2; ; ; 3; ; ; ];
|           ^ style: this semicolon is not required and can be removed [fixed]
In test_02.m, line 16
| e = [1; ; ; ; 2; ; ; 3; ; ; ];
|             ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_02.m, line 16
| e = [1; ; ; ; 2; ; ; 3; ; ; ];
|             ^ style: this semicolon is not required and can be removed [fixed]
In test_02.m, line 16
| e = [1; ; ; ; 2; ; ; 3; ; ; ];
|                  ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_02.m, line 16
| e = [1; ; ; ; 2; ; ; 3; ; ; ];
|                  ^ style: this semicolon is not required and can be removed [fixed]
In test_02.m, line 16
| e = [1; ; ; ; 2; ; ; 3; ; ; ];
|                    ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_02.m, line 16
| e = [1; ; ; ; 2; ; ; 3; ; ; ];
|                    ^ style: this semicolon is not required and can be removed [fixed]
In test_02.m, line 16
| e = [1; ; ; ; 2; ; ; 3; ; ; ];
|                       ^ style: this semicolon is not required and can be removed [fixed]
In test_02.m, line 16
| e = [1; ; ; ; 2; ; ; 3; ; ; ];
|                         ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_02.m, line 16
| e = [1; ; ; ; 2; ; ; 3; ; ; ];
|                         ^ style: this semicolon is not required and can be removed [fixed]
In test_02.m, line 16
| e = [1; ; ; ; 2; ; ; 3; ; ; ];
|                           ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_02.m, line 16
| e = [1; ; ; ; 2; ; ; 3; ; ; ];
|                           ^ style: this semicolon is not required and can be removed [fixed]
In test_02.m, line 16
| e = [1; ; ; ; 2; ; ; 3; ; ; ];
|                             ^ style: ] must not be preceeded by whitespace [fixed]
test_03.m: error: file is not auto-fixed because it contains parse errors
In test_03.m, line 3
| x = [,,]
|      ^ style: comma cannot be preceeded by whitespace and must be followed by whitespace
In test_03.m, line 3
| x = [,,]
|      ^ style: this comma is not required and can be removed
In test_03.m, line 3
| x = [,,]
|       ^ error: expected M_KET, found COMMA instead
In test_03.m, line 3
| x = [,,]
|       ^ style: comma cannot be preceeded by whitespace and must be followed by whitespace
test_04.m: error: file is not auto-fixed because it contains parse errors
In test_04.m, line 3
| x = [,,;]
|      ^ style: comma cannot be preceeded by whitespace and must be followed by whitespace
In test_04.m, line 3
| x = [,,;]
|      ^ style: this comma is not required and can be removed
In test_04.m, line 3
| x = [,,;]
|       ^ error: expected M_KET, found COMMA instead
In test_04.m, line 3
| x = [,,;]
|       ^ style: comma cannot be preceeded by whitespace and must be followed by whitespace
In test_04.m, line 3
| x = [,,;]
|        ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace
test_05.m: error: file is not auto-fixed because it contains parse errors
In test_05.m, line 3
| x = [;,,]
|      ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace
In test_05.m, line 3
| x = [;,,]
|      ^ style: this semicolon is not required and can be removed
In test_05.m, line 3
| x = [;,,]
|       ^ style: comma cannot be preceeded by whitespace and must be followed by whitespace
In test_05.m, line 3
| x = [;,,]
|       ^ style: this comma is not required and can be removed
In test_05.m, line 3
| x = [;,,]
|        ^ error: expected M_KET, found COMMA instead
In test_05.m, line 3
| x = [;,,]
|        ^ style: comma cannot be preceeded by whitespace and must be followed by whitespace
In test_06.m, line 3
| a = [,;,]
|      ^ style: comma cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_06.m, line 3
| a = [,;,]
|      ^ style: this comma is not required and can be removed [fixed]
In test_06.m, line 3
| a = [,;,]
|       ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_06.m, line 3
| a = [,;,]
|       ^ style: this semicolon is not required and can be removed [fixed]
In test_06.m, line 3
| a = [,;,]
|        ^ style: comma cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_06.m, line 3
| a = [,;,]
|        ^ style: this comma is not required and can be removed [fixed]
In test_06.m, line 3
| a = [,;,]
|         ^ style: end statement with a semicolon [fixed]
In test_07_a.m, line 3
| a = [;        % a messy example
|      ^ style: this semicolon is not required and can be removed [fixed]
In test_07_a.m, line 4
|      ;;1]     % with comments
|      ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_07_a.m, line 4
|      ;;1]     % with comments
|      ^ style: this semicolon is not required and can be removed [fixed]
In test_07_a.m, line 4
|      ;;1]     % with comments
|       ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_07_a.m, line 4
|      ;;1]     % with comments
|       ^ style: this semicolon is not required and can be removed [fixed]
In test_07_a.m, line 4
|      ;;1]     % with comments
|         ^ style: end statement with a semicolon [fixed]
In test_07_b.m, line 3
| b = [;        ... a messy example
|      ^ style: this semicolon is not required and can be removed [fixed]
In test_07_b.m, line 4
|      ;;1]     ... with continuations
|      ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_07_b.m, line 4
|      ;;1]     ... with continuations
|      ^ style: this semicolon is not required and can be removed [fixed]
In test_07_b.m, line 4
|      ;;1]     ... with continuations
|       ^ style: semicolon cannot be preceeded by whitespace and must be followed by whitespace [fixed]
In test_07_b.m, line 4
|      ;;1]     ... with continuations
|       ^ style: this semicolon is not required and can be removed [fixed]
In test_07_b.m, line 4
|      ;;1]     ... with continuations
|         ^ style: end statement with a semicolon [fixed]
In test_07_b.m, line 4
|      ;;1]     ... with continuations
|               ^^^^^^^^^^^^^^^^^^^^^^^ style: useless line continuation [fixed]
In test_07_b.m, line 6
| % b = 1
| ^^^^^^^ style: indentation not correct, should be 2 spaces, not 0 [fixed]
In test_07_c.m, line 4
|      1]
|       ^ style: end statement with a semicolon [fixed]
In test_07_d.m, line 4
|     ;
|     ^ style: this semicolon is not required and can be removed [fixed]
In test_07_d.m, line 5
|     ;
|     ^ style: this semicolon is not required and can be removed [fixed]
In test_07_d.m, line 8
|     ;
|     ^ style: this semicolon is not required and can be removed [fixed]
In test_07_d.m, line 9
|     ]
|     ^ style: end statement with a semicolon [fixed]
MISS_HIT Style Summary: 10 file(s) analysed, 114 style issue(s), 6 error(s)

=== HTML MODE ===
MISS_HIT Style Summary: 10 file(s) analysed, 114 style issue(s), 3 error(s)

=== ! BROKEN FIXES ! ===
Fixing is not idempotent for ./test_07_a.m
Fixing is not idempotent for ./test_07_b.m
